[package]
name = "merino"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = { version = "0.18.0", features = ["serde"] }
enum-map = "2.7.3"
gfarch = "0.3.0"
paste = "1.0.15"
rfd = "0.17.2"
strum = { version = "0.28.0", features = ["derive"] }
