[package]
name = "merino"
version = "1.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.102"
byteorder = "1.5.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_dock = { version = "0.18.0", features = ["serde"] }
enum-map = { version = "2.7.3", features = ["serde"] }
gfarch = "0.3.0"
gfbson = { version = "0.1.0", features = ["json"] }
image = "0.25.10"
index-map = "0.1.0"
paste = "1.0.15"
rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["stream"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
zip = "8.6.0"
